force-app/main/default/objects/pro_Notification_Config__mdt/fields/pro_Active__c.field-meta.xml
<CustomField>
    <fullName>pro_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>