force-app/main/default/objects/pro_Notification_Config__mdt/fields/pro_Bell_Body__c.field-meta.xml
<CustomField>
    <fullName>pro_Bell_Body__c</fullName>
    <description>Body text for the in-app bell notification. Supports merge tokens.</description>
    <inlineHelpText>Bell notification body. Keep it short — bell notifications are glanced at, not read. Supports merge tokens in curly braces — any field API name on the host record plus {RecordLink} and {Today}.</inlineHelpText>
    <label>Bell Body</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>