force-app/main/default/objects/pro_Notification_Config__mdt/fields/pro_Bell_Enabled__c.field-meta.xml
<CustomField>
    <fullName>pro_Bell_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables the in-app bell channel independently. Requires Active = true and a Notification Type populated.</description>
    <inlineHelpText>Independent toggle for the in-app bell channel. If Active is true, this is checked, and a Notification Type is populated, bell notifications are sent. Unchecking silences bell without affecting email.</inlineHelpText>
    <label>Bell Enabled</label>
    <type>Checkbox</type>
</CustomField>