force-app/main/default/objects/pro_Notification_Config__mdt/fields/pro_Bell_Title__c.field-meta.xml
<CustomField>
    <fullName>pro_Bell_Title__c</fullName>
    <description>Title line for the in-app bell notification. Supports merge tokens.</description>
    <inlineHelpText>Bell notification title (bold header). Keep to one scannable line. Supports merge tokens in curly braces — any field API name on the host record plus {RecordLink} and {Today}.</inlineHelpText>
    <label>Bell Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>