force-app/main/default/objects/pro_Notification_Config__mdt/fields/pro_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>pro_Email_Body__c</fullName>
    <description>Plain text body for the email notification. Supports merge tokens.</description>
    <inlineHelpText>Email body (plain text). Supports merge tokens in curly braces — any field API name on the host record (e.g. {Status}, {Owner.Name}) plus {RecordLink} and {Today}. Follows the Prodigy four-part structure: introduction, record link, key fields, sign-off.</inlineHelpText>
    <label>Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>