force-app/main/default/objects/pro_Notification_Config__mdt/fields/pro_Email_Enabled__c.field-meta.xml
<CustomField>
    <fullName>pro_Email_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables the email channel independently. Requires Active = true.</description>
    <inlineHelpText>Independent toggle for the email channel. If Active is true and this is checked, emails are sent. Unchecking silences email without affecting the bell channel.</inlineHelpText>
    <label>Email Enabled</label>
    <type>Checkbox</type>
</CustomField>