force-app/main/default/objects/pro_Notification_Config__mdt/fields/pro_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>pro_Email_Subject__c</fullName>
    <description>Subject line for the email notification. Supports merge tokens.</description>
    <inlineHelpText>Email subject line. Supports merge tokens in curly braces — any field API name on the host record (e.g. {CaseNumber}, {Account.Name}) plus {RecordLink} and {Today}.</inlineHelpText>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>