force-app/main/default/objects/pro_Notification_Config__mdt/fields/pro_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>pro_Event_Type__c</fullName>
    <label>Event Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>