force-app/main/default/objects/pro_Notification_Config__mdt/fields/pro_Key_Fields__c.field-meta.xml
<CustomField>
    <fullName>pro_Key_Fields__c</fullName>
    <label>Key Fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>