force-app/main/default/objects/pro_Notification_Config__mdt/fields/pro_Link_Target__c.field-meta.xml
<CustomField>
    <fullName>pro_Link_Target__c</fullName>
    <label>Link Target</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>