force-app/main/default/objects/pro_Notification_Config__mdt/fields/pro_Notification_Enabled__c.field-meta.xml
<CustomField>
    <fullName>pro_Notification_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notification Enabled</label>
    <type>Checkbox</type>
</CustomField>