force-app/main/default/objects/pro_Notification_Config__mdt/fields/pro_Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>pro_Notification_Type__c</fullName>
    <description>DeveloperName of the Custom Notification Type used for the bell channel.</description>
    <inlineHelpText>DeveloperName of the Custom Notification Type to use for the bell channel. Leave blank or uncheck Bell Enabled to disable bell notifications. The bundle ships with a default type — use pro_Framework_Notification if you want to use the bundled type. You can also create your own Custom Notification Type in Setup and reference its DeveloperName here.</inlineHelpText>
    <label>Notification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>