force-app/main/default/objects/pro_Notification_Config__mdt/fields/pro_Recipients__c.field-meta.xml
<CustomField>
    <fullName>pro_Recipients__c</fullName>
    <description>Comma-separated recipient list using prefix syntax. Supports user, group, profile, and field prefixes.</description>
    <inlineHelpText>Comma-separated recipient list. Mix any prefixes: user:&lt;Username&gt; (active users); group:&lt;DeveloperName&gt; (Public Group or Queue members, not Roles, no nested group recursion); profile:&lt;Profile Name&gt; (active users on that profile); profiledev:&lt;Profile Name&gt; (same as profile:, kept for compat); field:&lt;relationship.path&gt; (dot-notation to a User Id on the record, up to 5 hops, e.g. OwnerId, Account.Owner.ManagerId). Malformed tokens are skipped silently.</inlineHelpText>
    <label>Recipients</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>